# txtr-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cache.py  config.py  enrich.py  extractor.py  main.py  models.py  utils.py
app/static/: swagger.css
scripts/: smoke.bat
tests/: test_health.py  test_parse_smoke.py  test_suite.py
