[project]
name = "url-insights-mini"
version = "0.1.0"
description = "URL Insights Mini Project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "URL Insights Mini Developer" }
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "trafilatura",
    "beautifulsoup4",
    "pydantic-settings",
    "langdetect",
    "nltk",
    "sumy",
    "rake-nltk",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
run = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.ruff.isort]
force-single-line = true
order-by-type = true
